# Lab2_INF_SYS

./: .clang-format  CMakeLists.txt  MainWindow.hxx  a_star.hpp  main.cpp  matrix.hpp  node.hpp
